# diyabet-tahmini-pima-verisetidenemeleri

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
betikler/: benchmark_method_comparison.py  benchmark_scale_sweep.py  conservative_500_sweep.py  controlled_benchmark_report.py  controlled_synthetic_benchmark.py  degerlendirmeyi_calistir.py  eda_raporu_uret.py  egitimi_calistir.py  final_1000_artifact_uret.py  literatur_deneyleri.py  min90_final_rapor_v2_uret.py  min90_sentetik_benchmark.py  min90_small_scale_sweep.py  min90_vs_strict2700_fark_analizi.py  ml_yeniden_kur.py  model_artifact_export.py  pima_korelasyon_deney_dagilim_raporu.py  resmi_skor_tablosu_uret.py  sentetik_benchmark_egit.py  sentetik_gercek_pima_uret.py  sentetik_risk_audit_raporu_uret.py  veri_artirmadan_optimizasyon.py  veri_mudahale_deneyleri.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
dagitim/: dagitim_notlari.md  diyabet_risk.service  gunicorn_conf.py  nginx.conf
dokumanlar/: api_sozlesmesi.md  degisim_kaydi.md  proje_kapsami.md  resmi_skor_tablosu.md  risk_kaydi.md  test_senaryolari.md  veri_artirmadan_optimizasyon_raporu.md
testler/: test_api.py  test_artifact_yukleme.py  test_benchmark_scale_sweep.py  test_controlled_synthetic_benchmark.py  test_dogrulama.py  test_maksimum_skor_arama.py  test_min90_sentetik_benchmark.py  test_min90_small_scale_sweep.py  test_risk_mantigi.py  test_sentetik_benchmark_optimizasyonu.py  test_tahmin.py  test_veri_mudahale_deneyleri.py
uygulama/: main.py
(+3910 files in other folders)
