[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diyabet-risk-tahmini"
version = "0.1.0"
description = "Kadin bireylerde diyabet risk tahmini projesi"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["testler"]
addopts = "-q"
